@@ -14,6 +14,7 @@ build-stamp:
 	# the files.
 	cd debian_bundle && python test_debtags.py
 	cd debian_bundle && python changelog.py
+	python debian_bundle/python_support.py
 	debian_bundle/doc-debtags > README.debtags
 
 	touch $@
